[package]
name = "advent-2022"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day-01"
path = "src/day-01.rs"

[[bin]]
name = "day-02"
path = "src/day-02.rs"

[[bin]]
name = "day-03"
path = "src/day-03.rs"

[[bin]]
name = "day-04"
path = "src/day-04.rs"

[[bin]]
name = "day-05"
path = "src/day-05.rs"

[[bin]]
name = "day-06"
path = "src/day-06.rs"

[dependencies]
itertools = "0.10.5"
lazy_static = "1.4.0"
log = "0.4.17"
regex = "1.7.0"
